[package]
name = "photos"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version="0.4.42", features=["std", "serde"], default-features = true }
clap = { version = "4.5.48", features=["derive"] }
const_format = "0.2.35"
eframe = { version = "0.33.0", features = ["persistence"] }
egui = "0.33.0"
egui_extras = { version = "0.33.0", features = ["image", "file"] }
egui_material_icons = "0.5.0"
env_logger = "0.11.8"
image = { version = "0.25.8", features = ["jpeg"], default-features = false }
log = "0.4.28"
reqwest = { version = "0.12.24", features = ["multipart", "stream", "blocking"], default-features = true }
serde = "1.0.227"
serde_json = "1.0.145"
toml = "0.9.7"

[lints.clippy]
collapsible_if = "allow"
collapsible_else_if = "allow"
single_match = "allow"

[profile.release]
debug = "line-tables-only"
